learning my second website

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
    <h1>hello, everyone</h1>
+   <p>this is my second website </p>
+   <p>checkout the site it shows or not!</p>
 </body>
 </html>
